Setting disables the delete command